# roc-time-bio-tagging

./: .gitignore  README.md  pyproject.toml  roc_time_parsing_pipeline_end_to_end_implementation_plan_python.md
api/: README.md  __init__.py  app.py  schema.py
data/: extractor_dev.jsonl  extractor_train.jsonl  normalizer_dev.jsonl  normalizer_train.jsonl  raw_prompts.jsonl  raw_prompts_with_meta.jsonl  spans_labeled.jsonl
scripts/: compare_eval_runs.py  evaluate_pipeline.py  generate_prompts.py  report_span_coverage.py  split_data.py  validate_spans_jsonl.py
src/roc_time_parser/: cli.py  config.py  pipeline.py  policy.py  preprocess.py  resolver.py  schema.py
src/roc_time_parser/extractor/: dataset.py  infer.py  labels.py  model.py  train.py
src/roc_time_parser/normalizer/: dataset.py  infer.py  model.py  ollama_client.py  train.py
tests/: conftest.py  test_extractor_utils.py  test_normalizer.py  test_preprocess.py  test_resolver.py  test_schema.py
